Use Inconsolata font

--- a/layouts/partials/profile.html
+++ b/layouts/partials/profile.html
@@ -1,5 +1,7 @@
 <header class="profile">
-
+  <link rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Inconsolata">
+  
     <h1>{{ .Site.Title }}</h1>
     
     {{ with .Site.Params.Bio }}
