--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@ html[theme='dark-mode'] {
 
 body {
   line-height: 1;
-  font: normal 15px/1.5em 'Monaco', monospace;
+  font: normal 15px/1.5em 'Inconsolata', monospace;
   color: #404040;
   line-height: 1.75;
   letter-spacing: 0.008em;
@@ -250,7 +250,7 @@ nav.navigation a.button {
 /* profile  */
 
 .profile {
-  margin: 60px auto 0 auto;
+  margin: 20px auto 0 auto;
   text-align: center;
 }
 
@@ -266,7 +266,7 @@ nav.navigation a.button {
   letter-spacing: 0px;
   font-size: 20px;
   color: #404040;
-  font: bolder 60px/1.5em 'Monaco', monospace;
+  font: bolder 60px/1.5em 'Inconsolata', monospace;
   margin-bottom: 0;
   margin-top: 0;
 }
